--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -33,5 +33,5 @@ jobs:
         git config user.email "github-actions@github.com"
         git add songs_with_images.json
         git commit -m "Weekly JSON update" || echo "No changes to commit"
-        git push https://karanveer-13:${{ secrets.songsTK }}@github.com/karanveer-13/songs_update.git HEAD:main
+        git push https://karanveer-13:${{ secrets.SONGSTK }}@github.com/karanveer-13/songs_update.git HEAD:main
 
